# RealtimeStream

./: .gitignore  README.md  pyproject.toml  requirements-core.txt  requirements.txt
.github/workflows/: ci.yml
dags/: gold_processing_dag.py
dashboard/: app.py
dashboard/.streamlit/: config.toml
docker/: Dockerfile.generator  Dockerfile.spark  docker-compose.yml  prometheus.yml
docs/: architecture.md  development.md  getting_started.md  usage.md
sample_data/: sample_clickstream.json
src/: __init__.py  alerting.py  base.py  bronze_streaming.py  config.py  data_generator.py  gold_aggregations.py  silver_streaming.py  utils.py
tests/: test_alerting.py  test_bronze_streaming.py  test_data_generator.py  test_gold_aggregations.py  test_silver_streaming.py
